compiler/src/test/resources/golden/errors/suggest_ctor_pattern.dawn
type Shape = | Circle(r: Float) | Square(s: Float)

fn area(s: Shape) -> Float =
  match s {
    Cirle(r)  -> r
    Square(x) -> x
    _         -> 0.0
  }
