compiler/src/test/resources/golden/errors/suggest_ctor_pattern.err
error: undefined constructor in pattern: Cirle
  --> suggest_ctor_pattern.dawn:5:5
  |
5 |     Cirle(r)  -> r
  |     ^^^^^
  = hint: did you mean `Circle`?
